frontend/src/sass/_planet.scss
@charset "utf-8";
@use "sass:list";

/* Planet */
$planet-colours: (
    mercury: (rgba(91, 91, 91, 0.25), rgba(91, 91, 91, 0.35)),
    venus: (rgba(233, 174, 73, 0.25), rgba(233, 174, 73, 0.35)),
    earth: (rgba(30, 58, 117, 0.25), rgba(30, 58, 117, 0.35)),
    mars: (rgba(223, 100, 59, 0.25), rgba(223, 100, 59, 0.35)),
    jupiter: (rgba(164, 171, 166, 0.25), rgba(164, 171, 166, 0.35)),
    saturn: (rgba(225, 194, 154, 0.25), rgba(225, 194, 154, 0.35)),
    uranus: (rgba(164, 212, 220, 0.25), rgba(164, 212, 220, 0.35)),
    neptune: (rgba(74, 139, 223, 0.25), rgba(74, 139, 223, 0.35)),
);
.planet {
    font-size: var(--paragraph-size);
    color: var(--primary-colour);
    background: rgba(217, 217, 217, 0.06);
    padding: 1.8rem;
    margin: 1.2rem;
    border-radius: 2.2rem;
    box-shadow: 0 4px 53px 21px rgba(255, 255, 255, 0.25), inset 0 4px 78px 2px rgba(255, 255, 255, 0.35);
    @each $planet, $colours in $planet-colours {
        &.#{$planet} {
            box-shadow: 0 4px 53px 21px #{list.nth($colours, 1)}, inset 0 4px 78px 2px #{list.nth($colours, 2)};
        }
    }
    h1 {
        font-weight: normal;
        font-size: inherit;
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
        align-items: center;
        margin-bottom: 1.9rem;
        img {
            width: 126px;
            border-radius: 50%;
            object-fit: cover;
            aspect-ratio: 1;
        }
    }
    ul {
        display: flex;
        flex-wrap: wrap;
        gap: 3rem;
        justify-content: center;
        list-style: none;
        margin-top: 2.5rem;
        img {
            width: 130px;
            aspect-ratio: 1;
            border-radius: 50%;
            object-fit: cover;
        }
    }
    li {
        margin-top: 1.9rem;
    }
    @media (min-width: 600px) {
        --title-size: 3.6rem;
        --paragraph-size: 2.4rem;
        display: grid;
        grid-template: repeat(2, auto) / 28.4rem 1fr;
        gap: 7rem;
        padding: 10.4rem 8.5rem;
        margin: 4.7rem;
        border-radius: 5.6rem;
        box-shadow: 1px 1px 53px 21px rgba(255, 255, 255, 0.25), inset 0px 4px 78px 2px rgba(255, 255, 255, 0.35);
        @each $planet, $colours in $planet-colours {
            &.#{$planet} {
                box-shadow: 1px 1px 53px 21px #{list.nth($colours, 1)}, inset 0px 4px 78px 2px #{list.nth($colours, 2)};
            }
        }
        h1 {
            font-size: var(--title-size);
            text-align: center;
            display: block;
            grid-row: 1 / -1;
            margin-bottom: 0;
            img {
                display: block;
                width: 330px;
            }
        }
        p {
            font-size: var(--paragraph-size);
        }
        ul,
        li {
            margin-top: 0;
        }
        ul {
            flex-wrap: initial;
            gap: .9rem;
            img {
                border-radius: initial;
            }
        }
    }
}

